# neulix_datahub

./: .gitignore  README.md  pyproject.toml  release.py
core/airflow/: Dockerfile  Makefile  docker-compose.yml  requirements.txt
core/airflow/dags/data_capture/: wikipedia_dag.py
core/airflow/dags/rpa_workflow/: linkedin_dag.py
core/configs/: logs.py  secret.py
core/utils/: data_core.py  db_core.py  sheets_core.py  storage.py
neulix_dataflow/spiders/: base_spider.py  example_spider.py  linkedin_spider.py
