[project]
name = "aav-datastream"
version = "2.11.0"
description = ""
authors = [
    {name = "Fabricio A. Lopes",email = "flopes-ext@techforti.com.br"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pandas (>=2.1.2,<2.2)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=1.4.28,<2.0)",
    "sshtunnel (>=0.4.0,<0.5.0)",
    "pandas-gbq (>=0.28.0,<0.29.0)",
    "google-cloud-logging (>=3.11.4,<4.0.0)",
    "google-cloud-secret-manager (>=2.23.2,<3.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "google-cloud-storage (>=1.16,<3.0.0)",
    "pymssql (>=2.3.4,<3.0.0)",
    "apache-airflow[google,postgres,python] (>=2.8.1)",
    "apache-airflow-providers-microsoft-mssql (>=4.2.2,<5.0.0)",
    "sdv (>=1.20.1,<2.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "streamlit-lottie (>=0.0.5,<0.0.6)",
    "streamlit-aggrid (>=1.1.5,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
apache-airflow = {allow-prereleases = true}
